--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <title>React app (learning purposes only)</title>
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
